--- a/guidexp.html
+++ b/guidexp.html
@@ -45,7 +45,7 @@
 								<h3>Participants</h3>
 								<p>1 Developer</p>
 								<h3>Used languages and technologies</h3>
-								<p>JavaScript, jQuery, CSS, HTML, Git</p>
+								<p>JavaScript, jQuery, CSS, HTML, Git, Trello</p>
 							</section>
 
 					</div>
