--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>303/1 Mouat Street<br />
-								Lyneham, ACT 2602</p>
+								<p>20 Allara Street<br />
+								Canberra, ACT 2601</p>
 							</section>
 							<section>
 								<h3>Email</h3>
